2023-10-19  Michael Albinus  <michael.albinus@gmx.de>

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 29.2.

2023-10-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-revert-buffer-with-sudo):
	Use `buffer-file-name' instead of `buffer-name'.  (Bug#66571)

2023-10-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-expand-file-name):
	* tramp-gvfs.el (tramp-gvfs-handle-expand-file-name):
	* tramp-sh.el (tramp-sh-handle-expand-file-name):
	* tramp-smb.el (tramp-smb-handle-expand-file-name):
	* tramp-sudoedit.el (tramp-sudoedit-handle-expand-file-name):
	Handle quoted tilde.  (Bug#65685)

2023-10-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
	Handle `unmounted'.

	* tramp-sh.el (tramp-sh-handle-file-notify-add-watch):
	Handle `unmount' and `unmounted'.

2023-10-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (ls-lisp-dirs-first, ls-lisp-emulation)
	(ls-lisp-ignore-case, ls-lisp-verbosity): Declare.
	(tramp-handle-insert-directory): Bind `ls-lisp-*' options.  Call
	`ls-lisp-set-options'.

	* tramp-sh.el (tramp-sh-handle-insert-directory): Reorganize.

2023-10-01  Stefan Kangas  <stefankangas@gmail.com>

	* tramp.el (tramp-default-method): Capitalize 'Windows' where it
	clearly refers to the non-free operating system with that name.

2023-09-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-bsd-unames): New defconst.
	(tramp-sh-handle-file-ownership-preserved-p)
	(tramp-open-connection-setup-interactive-shell)
	(tramp-get-ls-command): Use it.
	(tramp-sh-handle-insert-directory): Improve handling of "--dired".

2023-09-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Adapt docstring.  (Bug#66093)
	(tramp-handle-make-process): Replace ?a by "-t" if indicated.

	* tramp-sshfs.el (tramp-methods): Use "%a".
	(tramp-sshfs-handle-process-file): Replace ?a by "-t".
